objects/Activity/fields/Before_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Before_Last_Modified_Date__c</fullName>
    <label>Before Last Modified Date</label>
    <type>DateTime</type>
</CustomField>