objects/Activity/fields/Category2__c.field-meta.xml
<CustomField>
    <fullName>Category2__c</fullName>
    <formula>IF(ISPICKVAL(TT_Category__c, &apos;task&apos;) , &apos;Task&apos;,
IF(ISPICKVAL(TT_Category__c, &apos;request&apos;), &apos;Client Request&apos;, &apos;&apos;)
)</formula>
    <label>Category</label>
    <type>Text</type>
</CustomField>