objects/Activity/fields/Share_with_client_s__c.field-meta.xml
<CustomField>
    <fullName>Share_with_client_s__c</fullName>
    <label>Show on client timeline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>