objects/Activity/fields/TT_Category__c.field-meta.xml
<CustomField>
    <fullName>TT_Category__c</fullName>
    <label>BackendCategory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>task</fullName>
                <default>true</default>
                <label>Task</label>
            </value>
            <value>
                <fullName>request</fullName>
                <label>Client Request</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>