objects/Activity/fields/TT_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>TT_Client_Name__c</fullName>
    <label>TT Client Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>