objects/Activity/fields/TT_Needs_Sync__c.field-meta.xml
<CustomField>
    <fullName>TT_Needs_Sync__c</fullName>
    <defaultValue>true</defaultValue>
    <label>TT Needs Sync</label>
    <type>Checkbox</type>
</CustomField>