objects/Activity/fields/TT_TaskId__c.field-meta.xml
<CustomField>
    <fullName>TT_TaskId__c</fullName>
    <description>TT ACtion Id</description>
    <label>TT TaskId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>